force-app/main/default/objects/mkto_si__EmailActivityCache__c/mkto_si__EmailActivityCache__c.object-meta.xml
<CustomObject>
    <label>EmailActivityCache</label>
    <nameField>
        <label>EmailActivityCache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmailActivityCache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>