force-app/main/default/objects/mkto_si__EmailActivityCache__c/fields/mkto_si__ContactLinkName__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__ContactLinkName__c</fullName>
    <label>ContactLinkName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>