force-app/main/default/objects/mkto_si__EmailActivityCache__c/fields/mkto_si__MessageId__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__MessageId__c</fullName>
    <label>MessageId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>