force-app/main/default/objects/mkto_si__EmailActivityCache__c/fields/mkto_si__MessageThreadIndex__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__MessageThreadIndex__c</fullName>
    <label>MessageThreadIndex</label>
    <length>9</length>
    <type>Text</type>
</CustomField>