force-app/main/default/objects/mkto_si__EmailActivityCache__c/fields/mkto_si__MessageType__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__MessageType__c</fullName>
    <label>MessageType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>