force-app/main/default/objects/mkto_si__EmailActivityCache__c/fields/mkto_si__Subject__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>