force-app/main/default/objects/mkto_si__EmailActivityCache__c/fields/mkto_si__ThreadSubject__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__ThreadSubject__c</fullName>
    <label>ThreadSubject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>